--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -25,6 +25,10 @@
         <p class="mt-3 text-center">
           Don’t have an account? <a href="/register">Sign Up</a>
         </p>
+
+        <p class="mt-3 text-center">
+          Forgot Password? <a href="/forgot_password">Click Here</a>
+        </p>
       </div>
     </div>
   </div>
