--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -32,6 +32,12 @@
             <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
             <div id="message" class="form-text"></div>
           </div>
+          <div class="mb-3">
+            <label for="security_answer" class="form-label">
+              What is your childhood best friend's name?
+            </label>
+            <input type="text" class="form-control" id="security_answer" name="security_answer" required>
+          </div>
           <button type="submit" class="btn btn-success w-100">Register</button>
           <p class="mt-3 text-center">
           Already have an account? <a href="/login">Sign In</a>
