--- a/app/templates/forgot_password.html
+++ b/app/templates/forgot_password.html
@@ -42,6 +42,9 @@
           </div>
 
           <button type="submit" class="btn btn-primary w-100">Reset Password</button>
+          <p class="mt-3 text-center">
+            <a href="/">Home</a>
+          </p>
         </form>
       </div>
     </div>
