--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,36 +1,62 @@
-{% extends "base.html" %}
+{% extends "base_auth.html" %}
+
+{% block title %}
+Login - Bajeti
+{% endblock %}
+
 {% block content %}
-<div class="row justify-content-center">
-  <div class="col-md-6">
-    <div class="card shadow-sm">
-      <div class="card-body">
-        <h3 class="card-title text-center mb-4">Sign In</h3>
+<section class="p-login">
+  <div class="p-login-container">
+    <h1 class="p-input-header">Sign In</h1>
 
-        {% if error %}
-        <div class="alert alert-danger">{{ error }}</div>
-        {% endif %}
+    {% if error %}
+    <div class="p-alert-error">
+      <span><i class="fa fa-exclamation-circle"></i></span>
+      <span>{{ error }}</span>
+    </div>
+    {% endif %}
 
-        <form method="POST" action="/login">
-          <div class="mb-3">
-            <label for="username" class="form-label">Email</label>
-            <input type="email" class="form-control" id="username" name="username" required>
-          </div>
-          <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" name="password" required>
-          </div>
-          <button type="submit" class="btn btn-primary w-100">Sign In</button>
-        </form>
+    <form method="POST" action="/login">
+      <div class="p-signin-details">
+        <label for="username">Email</label>
+        <input
+          type="email"
+          id="username"
+          name="username"
+          placeholder="Enter Email"
+          required
+        />
 
-        <p class="mt-3 text-center">
-          Don’t have an account? <a href="/register">Sign Up</a>
-        </p>
+        <label for="password">Password</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          placeholder="Enter Password"
+          required
+        />
 
-        <p class="mt-3 text-center">
-          Forgot Password? <a href="/forgot_password">Click Here</a>
-        </p>
+        <button type="submit" class="p-login-button" id="loginBtn">
+          <span class="p-btn-text">Login</span>
+          <span class="p-btn-spinner" style="display: none;">
+            <i class="fa fa-spinner fa-spin"></i>
+          </span>
+        </button>
       </div>
+    </form>
+
+    <div class="p-auth-links">
+      <p>
+        Don't have an account?
+        <a class="p-links" href="/register">Register</a>
+      </p>
+      <p>
+        Forgot password?
+        <a class="p-links" href="/forgot_password">Reset Password</a>
+      </p>
     </div>
   </div>
-</div>
+</section>
+
+<script src="/static/js/login.js"></script>
 {% endblock %}
