Added production and development environment variables and logic and I also added esbuild

--- a/app/static/css/forgot_password.css
+++ b/app/static/css/forgot_password.css
@@ -1,6 +1,7 @@
-@import url(/static/css/palette.css);
-@import url(/static/css/main.css);
-@import url(/static/css/login.css);
+@import url("./palette.css");
+@import url("./main.css");
+@import url("./login.css");
+
 
 .p-forgotpassword-container {
     width: 400px;
