--- a/app/static/css/modal.css
+++ b/app/static/css/modal.css
@@ -1,5 +1,6 @@
-@import url(/static/css/palette.css);
-@import url(/static/css/main.css);
+@import url("./palette.css");
+@import url("./main.css");
+
 
 .p-modal {
     display: none;
