--- a/app/templates/base_auth.html
+++ b/app/templates/base_auth.html
@@ -31,14 +31,22 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
 
-    <!-- App Styles -->
-    <link rel="stylesheet" href="/static/css/palette.css" />
-    <link rel="stylesheet" href="/static/css/main.css" />
-    <link rel="stylesheet" href="/static/css/login.css" />
-    <link rel="stylesheet" href="/static/css/register.css" />
-    <link rel="stylesheet" href="/static/css/forgot_password.css" />
-    <link rel="stylesheet" href="/static/css/modal.css" />
-    <link rel="stylesheet" href="/static/css/alert.css" />
+    {% if ENVIRONMENT == "production" %}
+    <!-- Minified CSS bundle-->
+     <link rel="stylesheet" href="/static/dist/styles.min.css">
+    {% else %}
+      <!-- Theme styles (keep your existing files) -->
+      <link rel="stylesheet" href="/static/css/palette.css">
+      <link rel="stylesheet" href="/static/css/main.css">
+      <link rel="stylesheet" href="/static/css/home.css">
+      <link rel="stylesheet" href="/static/css/login.css">
+      <link rel="stylesheet" href="/static/css/register.css">
+      <link rel="stylesheet" href="/static/css/profile.css">
+      <link rel="stylesheet" href="/static/css/forgot_password.css">
+      <link rel="stylesheet" href="/static/css/analytics.css">
+      <link rel="stylesheet" href="/static/css/modal.css">
+      <link rel="stylesheet" href="/static/css/alert.css">
+    {% endif %}
   </head>
 
   <body class="p-container light">
@@ -54,6 +62,13 @@
       {% block content %}{% endblock %}
     </main>
 
-    <script src="/static/js/main.js"></script>
+    {% if ENVIRONMENT == "production" %}
+      <script src="/static/dist/app.min.js" defer></script>
+    {% else %}
+      <script src="/static/js/main.js" defer></script>
+      <script src="/static/js/home.js" defer></script>
+      <script src="/static/js/profile.js" defer></script>
+      <script src="/static/js/forgot_password.js" defer></script>
+    {% endif %}
   </body>
 </html>
